[workspace]
members = ["apps/*", "games/*", "programs/*", "crates/*"]
default-members = ["apps/*", "games/*", "programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-client = "0.27"
anchor-lang = "0.27"
anchor-spl = "0.27"
anyhow = "1"
axum = "0.6"
broadcaster = "1"
bytecheck = "0.7"
cargo_metadata = "0.15"
cargo_toml = "0.15"
cfg-if = "1"
clap = "4"
console_error_panic_hook = "0.1"
leptos = { git = "https://github.com/leptos-rs/leptos", rev = "c66b673" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", rev = "c66b673" }
leptos_router = { git = "https://github.com/leptos-rs/leptos", rev = "c66b673" }
console_log = "0.2"
crates_io_api = "0.8"
doc-comment = "0.3"
dotenvy = "0.15"
egui = "0.21"
egui_demo_lib = "0.21"
env_logger = "0.10"
fs_extra = "1"
fstrings = "0.2"
futures = "0.3"
gdnative = "0.11"
godot_egui = { git = "https://github.com/ifiokjr/godot-egui", rev = "bd1ad11" }
heck = "0.4"
hex = "0.4"
home = "0.5"
http = "0.2"
indexmap = "1"
insta = "1"
lazy_static = "1"
log = "0.4"
notify = "5"
once_cell = "1.17"
owo-colors = "3"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5" }
rand = "0.8"
regex = "1"
reqwest = "0.11"
run_script = "0.10"
rkyv = "0.7"
serde = "1"
serde_json = "1"
simple_logger = "4"
solana-account-decoder = "1.14"
solana-client = "1.14"
solana-program = "1.14"
solana-sdk = "1.14"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
tokio = "1"
tower-cookies = "0.9"
tower = "0.4"
tower-http = "0.4"
typed-builder = "0.13"
validator = "0.16"
version_check = "0.9"
walrus = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-cli-support = "0.2"
wasm-cookies = "0.2"
web-sys = "0.3"

[workspace.metadata.cargo-all-features]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.dev.package.spinnybox]
opt-level = 3

[profile.release.package.fundraiser]
overflow-checks = true
# lto = "fat"
codegen-units = 1

# [profile.release.build-override.package.fundraiser]
# opt-level = 3
# incremental = false
# codegen-units = 1
