[workspace]
members = ["apps/*", "programs/*", "crates/*"]
default-members = ["apps/*", "programs/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
anchor-client = "0.27"
anchor-lang = "0.27"
anchor-spl = "0.27"
axum = "0.6"
cfg-if = "1"
console_error_panic_hook = "0.1"
console_log = "1"
dotenvy = "0.15"
heck = "0.4"
http = "0.2"
indexmap = "1"
insta = "1"
leptos = { version = "0.2" }
leptos_meta = { version = "0.2" }
leptos_router = { version = "0.2" }
log = "0.4"
once_cell = "1"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
serde = "1"
serde_json = "1"
simple_logger = "4"
solana-account-decoder = "1.14"
solana-client = "1.14"
solana-program = "1.14"
solana-sdk = "1.14"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
tokio = "1"
tower = "0.4"
tower-cookies = "0.9"
tower-http = "0.4"
typed-builder = "0.14"
wasm-bindgen = "0.2"
wasm-bindgen-cli-support = "0.2"
wasm-cookies = "0.2"
web-sys = "0.3"

[workspace.metadata.cargo-all-features]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.dev.package.spinnybox]
opt-level = 3

[profile.release.package.fundraiser]
overflow-checks = true
# lto = "fat"
codegen-units = 1

# [profile.release.build-override.package.fundraiser]
# opt-level = 3
# incremental = false
# codegen-units = 1
