[package]
name = "spinnybox_com"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { workspace = true, optional = true }
actix-web = { workspace = true, features = ["macros"], optional = true }
cfg-if = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
console_log = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
gloo-net = { workspace = true, features = ["http"] }
leptos = { workspace = true, default-features = false, features = ["serde"] }
leptos_meta = { workspace = true, default-features = false }
leptos_router = { workspace = true, default-features = false }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde_json = { workspace = true, optional = true }
simple_logger = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
leptos_autoreload = []
default = ["csr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "dep:wasm-bindgen",
  "dep:console_log",
  "dep:console_error_panic_hook",
]
csr = [
  "leptos/csr",
  "leptos_meta/csr",
  "leptos_router/csr",
  "dep:wasm-bindgen",
  "dep:console_log",
  "dep:console_error_panic_hook",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:reqwest",
  "dep:actix-web",
  "dep:actix-files",
  "dep:futures",
  "dep:simple_logger",
  "dep:serde_json",
]

[package.metadata.leptos]
# Path, relative to root, to generat rust code to
gen_file = "src/server/generated.rs"
# Path to the source index.html file
index_file = "index.html"
# [Optional] Files in the asset_dir will be copied to the target/site directory
assets_dir = "assets"
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end_test_cmd = "npx playwright test"
# On which port to serve the client side rendered site (when using --csr option)
csr_port = 3000
# The port to use for automatic reload monitoring
reload_port = 3001

[package.metadata.leptos.style]
# Main style file. If scss or sass then it will be compiled to css.
# the parent folder will be watched for changes
file = "style/main.scss"
# A https://browsersl.ist query
browserquery = "defaults"
