[package]
name = "spinnybox_com"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, optional = true }
cfg-if = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
console_log = { workspace = true, optional = true }
futures = { workspace = true }
gloo-net = { workspace = true, features = ["http"] }
http = { workspace = true, optional = true }
leptos = { workspace = true, default-features = false, features = ["serde"] }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true, default-features = false }
leptos_router = { workspace = true, default-features = false }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde_json = { workspace = true, optional = true }
simple_logger = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
leptos_autoreload = []
default = ["csr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "dep:wasm-bindgen",
  "dep:console_log",
  "dep:console_error_panic_hook",
]
csr = [
  "leptos/csr",
  "leptos_meta/csr",
  "leptos_router/csr",
  "dep:wasm-bindgen",
  "dep:console_log",
  "dep:console_error_panic_hook",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:reqwest",
  "dep:axum",
  "dep:http",
  "dep:leptos_axum",
  "dep:tower-http",
  "dep:simple_logger",
  "dep:serde_json",
]

[package.metadata.leptos]
# [Optional] Files in the asset_dir will be copied to the target/site directory
assets-dir = "assets"

# Main style file. If scss or sass then it will be compiled to css.
# the parent folder will be watched for changes
style-file = "styles/main.scss"

site-root = "target/site/kickjump_com"
bin-features = ["ssr"]
lib-features = ["hydrate"]
