[package]
name = "spinnybox_com"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, optional = true, features = ["headers"] }
cfg-if = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
console_log = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
futures = { workspace = true }
http = { workspace = true, optional = true }
leptos = { version = "0.2", default-features = false, features = ["serde"] }
leptos_axum = { version = "0.2", optional = true, default_features = false }
leptos_meta = { version = "0.2", default-features = false }
leptos_router = { version = "0.2", default-features = false }

log = { workspace = true }
once_cell = { workspace = true }
prisma-client-rust = { workspace = true }
prisma-client-rust-cli = { workspace = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
simple_logger = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tower-cookies = { workspace = true, optional = true, features = ["private", "signed"] }
tower-http = { workspace = true, optional = true, features = ["fs", "redirect"] }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["AbortController", "AbortSignal", "HtmlDocument"] }

[features]
leptos_autoreload = []
default = ["csr"]
hydrate = [
  "leptos/hydrate",
  "leptos_router/hydrate",
  "leptos_meta/hydrate",
  "dep:wasm-bindgen",
  "dep:console_log",
  "dep:console_error_panic_hook",
]
csr = [
  "leptos/csr",
  "leptos_router/csr",
  "leptos_meta/csr",
  "dep:wasm-bindgen",
  "dep:console_log",
  "dep:console_error_panic_hook",
]
ssr = [
  "leptos/ssr",
  "leptos_router/ssr",
  "leptos_meta/ssr",
  "dep:reqwest",
  "dep:axum",
  "dep:http",
  "dep:leptos_axum",
  "dep:tower-http",
  "dep:simple_logger",
  "dep:serde_json",
  "dep:tokio",
  "dep:tower-cookies",
  "dep:dotenvy",
]

[package.metadata.leptos]
output-name = "spinnybox_com"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site/kickjump_com"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] Files in the asset_dir will be copied to the target/site directory
assets-dir = "assets"
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-address = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# Main style file. If scss or sass then it will be compiled to css.
# the parent folder will be watched for changes
style-file = "styles/main.scss"
lib-features = ["hydrate"]
bin-features = ["ssr"]
