[package]
name = "spinnybox_2d"
version = "0.0.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
egui = { workspace = true }
egui_demo_lib = { workspace = true }
gdnative = { workspace = true }
godot_egui = { workspace = true }
rand = { workspace = true }
